icons updated, tab text alignment and placement fixed (padding)

--- a/css/main.css
+++ b/css/main.css
@@ -81,15 +81,15 @@ header{
 #mainNav li > a{
 	color:#999;
 	display:inline-block;
-	padding:11px 10px 10px 142px;
+	padding:11px 10px 10px 70px;
 	background-repeat:no-repeat;
 	font-family: "Signika";
 	font-weight:300;
-	font-size:17px;
+	font-size:15px;
 	color:#787878;
-	width:65px;
+
 	height:21px;
-	
+
 
 }
 
